Fix 'align-items' in the 'hero' div

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ ul {
     margin-bottom: 80px;
     display: flex;
     gap: 100px;
+    align-items: center;
 }
 
 .hero-text {
